// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`должен отобразить кнопку "Нет в продаже", если в расширенном списке нет других марок 1`] = `
<Link
  className="ListingPopularMMM__expandLink"
  key="linkToExpanded"
  onClick={[Function]}
>
  Нет в продаже — 1
</Link>
`;

exports[`должен правильно отрендерить ListingPopularMMM, марки 1`] = `
<Fragment>
  <div
    className="ListingPopularMMM"
    id="popularMMM"
  >
    <div
      className="ListingPopularMMM__items"
    >
      <div
        className="ListingPopularMMM__column"
        key="column-0"
      >
        <ListingPopularMMMItem
          count={775}
          key="BMW"
          metrika=",click,BMW"
          name="BMW"
          onClick={[Function]}
          value="BMW"
        />
        <ListingPopularMMMItem
          count={440}
          key="FORD"
          metrika=",click,FORD"
          name="Ford"
          onClick={[Function]}
          value="FORD"
        />
        <ListingPopularMMMItem
          count={748}
          key="HYUNDAI"
          metrika=",click,HYUNDAI"
          name="Hyundai"
          onClick={[Function]}
          value="HYUNDAI"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-1"
      >
        <ListingPopularMMMItem
          count={903}
          key="KIA"
          metrika=",click,KIA"
          name="Kia"
          onClick={[Function]}
          value="KIA"
        />
        <ListingPopularMMMItem
          count={1084}
          key="VAZ"
          metrika=",click,VAZ"
          name="LADA (ВАЗ)"
          onClick={[Function]}
          value="VAZ"
        />
        <ListingPopularMMMItem
          count={1403}
          key="MERCEDES"
          metrika=",click,MERCEDES"
          name="Mercedes-Benz"
          onClick={[Function]}
          value="MERCEDES"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-2"
      >
        <ListingPopularMMMItem
          count={519}
          key="MITSUBISHI"
          metrika=",click,MITSUBISHI"
          name="Mitsubishi"
          onClick={[Function]}
          value="MITSUBISHI"
        />
        <ListingPopularMMMItem
          count={617}
          key="NISSAN"
          metrika=",click,NISSAN"
          name="Nissan"
          onClick={[Function]}
          value="NISSAN"
        />
        <ListingPopularMMMItem
          count={681}
          key="RENAULT"
          metrika=",click,RENAULT"
          name="Renault"
          onClick={[Function]}
          value="RENAULT"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-3"
      >
        <ListingPopularMMMItem
          count={443}
          key="SKODA"
          metrika=",click,SKODA"
          name="Skoda"
          onClick={[Function]}
          value="SKODA"
        />
        <ListingPopularMMMItem
          count={659}
          key="VOLKSWAGEN"
          metrika=",click,VOLKSWAGEN"
          name="Volkswagen"
          onClick={[Function]}
          value="VOLKSWAGEN"
        />
        <Link
          className="ListingPopularMMM__expandLink"
          key="linkToExpanded"
          onClick={[Function]}
        >
          Все марки — 278
        </Link>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`должен правильно отрендерить ListingPopularMMM, марки 2`] = `
Array [
  "listing",
  Object {
    "catalog_filter": Array [
      Object {
        "mark": "BMW",
      },
    ],
  },
  null,
  Object {
    "isValidOffersNumber": true,
    "isValidPriceTo": false,
  },
]
`;

exports[`должен правильно отрендерить ListingPopularMMM, модели 1`] = `
<Fragment>
  <div
    className="ListingPopularMMM ListingPopularMMM_thin"
    id="popularMMM"
  >
    <div
      className="ListingPopularMMM__items"
    >
      <div
        className="ListingPopularMMM__column"
        key="column-0"
      >
        <ListingPopularMMMItem
          count={7}
          key="C_MAX"
          metrika=",click,FORD,C_MAX"
          name="C-MAX"
          onClick={[Function]}
          value="C_MAX"
        />
        <ListingPopularMMMItem
          count={9}
          key="ECOSPORT"
          metrika=",click,FORD,ECOSPORT"
          name="EcoSport"
          onClick={[Function]}
          value="ECOSPORT"
        />
        <ListingPopularMMMItem
          count={18}
          key="EXPLORER"
          metrika=",click,FORD,EXPLORER"
          name="Explorer"
          onClick={[Function]}
          value="EXPLORER"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-1"
      >
        <ListingPopularMMMItem
          count={11}
          key="FIESTA"
          metrika=",click,FORD,FIESTA"
          name="Fiesta"
          onClick={[Function]}
          value="FIESTA"
        />
        <ListingPopularMMMItem
          count={216}
          key="FOCUS"
          metrika=",click,FORD,FOCUS"
          name="Focus"
          onClick={[Function]}
          value="FOCUS"
        />
        <ListingPopularMMMItem
          count={26}
          key="FUSION"
          metrika=",click,FORD,FUSION"
          name="Fusion"
          onClick={[Function]}
          value="FUSION"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-2"
      >
        <ListingPopularMMMItem
          count={7}
          key="GALAXY"
          metrika=",click,FORD,GALAXY"
          name="Galaxy"
          onClick={[Function]}
          value="GALAXY"
        />
        <ListingPopularMMMItem
          count={28}
          key="KUGA"
          metrika=",click,FORD,KUGA"
          name="Kuga"
          onClick={[Function]}
          value="KUGA"
        />
        <ListingPopularMMMItem
          count={62}
          key="MONDEO"
          metrika=",click,FORD,MONDEO"
          name="Mondeo"
          onClick={[Function]}
          value="MONDEO"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-3"
      >
        <ListingPopularMMMItem
          count={6}
          key="MUSTANG"
          metrika=",click,FORD,MUSTANG"
          name="Mustang"
          onClick={[Function]}
          value="MUSTANG"
        />
        <ListingPopularMMMItem
          count={9}
          key="S_MAX"
          metrika=",click,FORD,S_MAX"
          name="S-MAX"
          onClick={[Function]}
          value="S_MAX"
        />
        <Link
          className="ListingPopularMMM__expandLink"
          key="linkToExpanded"
          onClick={[Function]}
        >
          Все модели — 88
        </Link>
      </div>
    </div>
  </div>
</Fragment>
`;

exports[`должен правильно отрендерить ListingPopularMMM, модели 2`] = `
Array [
  "listing",
  Object {
    "catalog_filter": Array [
      Object {
        "mark": "FORD",
        "model": "C_MAX",
      },
    ],
  },
  null,
  Object {
    "isValidOffersNumber": true,
    "isValidPriceTo": false,
  },
]
`;

exports[`должен правильно отрендерить ListingPopularMMM, пустой массив items 1`] = `""`;

exports[`должен правильно отрендерить ListingPopularMMM, пустой массив items 2`] = `undefined`;

exports[`не должен отобразить кнопку "Нет в продаже", если передан параметр hideEmpty 1`] = `
<Fragment>
  <div
    className="ListingPopularMMM"
    id="popularMMM"
  >
    <div
      className="ListingPopularMMM__items"
    >
      <div
        className="ListingPopularMMM__column"
        key="column-0"
      >
        <ListingPopularMMMItem
          count={10}
          key="mark_1"
          metrika=",click,mark_1"
          name="Mark 1"
          onClick={[Function]}
          url="link/listing/?catalog_filter=mark%3Dmark_1"
          value="mark_1"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-1"
      >
        <ListingPopularMMMItem
          count={10}
          key="mark_2"
          metrika=",click,mark_2"
          name="Mark 2"
          onClick={[Function]}
          url="link/listing/?catalog_filter=mark%3Dmark_2"
          value="mark_2"
        />
      </div>
      <div
        className="ListingPopularMMM__column"
        key="column-2"
      />
      <div
        className="ListingPopularMMM__column"
        key="column-3"
      />
    </div>
  </div>
</Fragment>
`;
